--- a/mujviplink_com_final/index.html
+++ b/mujviplink_com_final/index.html
@@ -3,23 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exkluzivní obsah</title>
+    <title>🔒 Exkluzivní Obsah</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding-top: 40px; background-color: #f7f7f7; }
+        body {
+            font-family: 'Montserrat', sans-serif;
+            background-color: #f0f4ff;
+            color: #333;
+            padding: 20px;
+            text-align: center;
+        }
+        .container {
+            background-color: #fff;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+            max-width: 480px;
+            margin: 40px auto;
+            padding: 20px;
+        }
+        img {
+            width: 100%;
+            max-width: 300px;
+            border-radius: 12px;
+            margin-bottom: 15px;
+        }
+        h1 {
+            color: #ff4081;
+            font-weight: 700;
+            font-size: 24px;
+        }
+        p {
+            font-size: 16px;
+            margin-bottom: 25px;
+        }
         button {
-            background-color: #ff69b4;
+            background-color: #ff4081;
             color: #ffffff;
             border: none;
-            padding: 15px 25px;
-            font-size: 18px;
+            padding: 12px 20px;
+            font-size: 16px;
             cursor: pointer;
-            border-radius: 5px;
+            border-radius: 8px;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #e73370;
         }
     </style>
 </head>
 <body>
-    <h1>Získej exkluzivní přístup!</h1>
-    <button id="redirectBtn">Pokračovat</button>
+    <div class="container">
+        <img src="foto.jpg" alt="Exkluzivní obsah">
+        <h1>Odemkni exkluzivní obsah</h1>
+        <p>Kliknutím níže získáš přístup k exkluzivnímu obsahu, který nenajdeš nikde jinde!</p>
+        <button id="redirectBtn">👉 Pokračovat 👈</button>
+    </div>
 
     <script>
         document.getElementById('redirectBtn').onclick = async () => {
