--- a/mujviplink_com_final/index.html
+++ b/mujviplink_com_final/index.html
@@ -56,7 +56,7 @@
 <body>
     <div class="container">
         <img src="foto.jpg" alt="Exkluzivní obsah">
-        <h1>Odemkni exkluzivní obsah</h1>
+        <h1>Tuhle stránku hledáš</h1>
         <p>Kliknutím níže získáš přístup k exkluzivnímu obsahu, který nenajdeš nikde jinde!</p>
         <button id="redirectBtn">👉 Pokračovat 👈</button>
     </div>
