--- a/mujviplink_com_final/index.html
+++ b/mujviplink_com_final/index.html
@@ -3,62 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🔒 Exkluzivní Obsah</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <title>Pokračujte dále</title>
     <style>
         body {
-            font-family: 'Montserrat', sans-serif;
-            background-color: #f0f4ff;
-            color: #333;
-            padding: 20px;
+            font-family: Arial, sans-serif;
             text-align: center;
+            padding-top: 50px;
+            background: linear-gradient(to bottom, #ffafbd, #ffc3a0);
+            color: #333;
         }
         .container {
-            background-color: #fff;
+            background-color: rgba(255,255,255,0.9);
+            max-width: 400px;
+            margin: auto;
+            padding: 25px;
             border-radius: 12px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.15);
-            max-width: 480px;
-            margin: 40px auto;
-            padding: 20px;
-        }
-        img {
-            width: 100%;
-            max-width: 300px;
-            border-radius: 12px;
-            margin-bottom: 15px;
-        }
-        h1 {
-            color: #ff4081;
-            font-weight: 700;
-            font-size: 24px;
-        }
-        p {
-            font-size: 16px;
-            margin-bottom: 25px;
+            box-shadow: 0 5px 10px rgba(0,0,0,0.15);
         }
         button {
-            background-color: #ff4081;
+            background-color: #ff69b4;
             color: #ffffff;
             border: none;
-            padding: 12px 20px;
-            font-size: 16px;
+            padding: 15px 30px;
+            font-size: 18px;
             cursor: pointer;
             border-radius: 8px;
-            transition: background-color 0.3s;
+            margin-top: 15px;
         }
         button:hover {
-            background-color: #e73370;
+            background-color: #e55ea1;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="foto.jpg" alt="Exkluzivní obsah">
-        <h1>Tuhle stránku hledáš</h1>
-        <p>Kliknutím níže získáš přístup k exkluzivnímu obsahu, který nenajdeš nikde jinde!</p>
-        <button id="redirectBtn">👉 Pokračovat 👈</button>
+        <h2>Děkuji za návštěvu!</h2>
+        <p>Klikni na tlačítko níže pro pokračování.</p>
+        <button id="redirectBtn">Pokračovat</button>
     </div>
 
     <script>
