--- a/mujviplink_com_final/index.html
+++ b/mujviplink_com_final/index.html
@@ -3,32 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokračujte dále</title>
+    <title>Přístup k exkluzivnímu obsahu</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            padding-top: 50px;
-            background: linear-gradient(to bottom, #ffafbd, #ffc3a0);
+            padding-top: 40px;
+            background: linear-gradient(to bottom, #ffdde1, #ee9ca7);
             color: #333;
         }
         .container {
-            background-color: rgba(255,255,255,0.9);
+            background-color: rgba(255,255,255,0.95);
             max-width: 400px;
             margin: auto;
-            padding: 25px;
-            border-radius: 12px;
-            box-shadow: 0 5px 10px rgba(0,0,0,0.15);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
+        img {
+            width: 100%;
+            border-radius: 10px;
+            margin-bottom: 15px;
         }
         button {
             background-color: #ff69b4;
-            color: #ffffff;
+            color: white;
             border: none;
             padding: 15px 30px;
             font-size: 18px;
             cursor: pointer;
             border-radius: 8px;
-            margin-top: 15px;
+            margin-top: 10px;
         }
         button:hover {
             background-color: #e55ea1;
@@ -37,8 +42,9 @@
 </head>
 <body>
     <div class="container">
-        <h2>Děkuji za návštěvu!</h2>
-        <p>Klikni na tlačítko níže pro pokračování.</p>
+        <img src="foto.jpg" alt="Foto">
+        <h2>Tuhle stránku hledáš!</h2>
+        <p>Klikni na tlačítko a pokračuj dále.</p>
         <button id="redirectBtn">Pokračovat</button>
     </div>
 
